--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 <link rel="icon" href={{ .Site.Params.favicon | default "/fav.png" }} type="image/gif">
 <script defer src="https://umami.robert-jensen.dk/script.js" data-website-id="9695b215-f70e-414e-b8a4-38fdbe4fb4ac"></script>
+<link rel="canonical" href="{{ .Permalink }}" />
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
